--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   json_annotation: ^4.8.1
   mvc_pattern: ^8.12.0
   datetime_picker_formfield: ^2.0.1
+  flutter_form_builder: ^9.1.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
