--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http:
+  http: ^1.1.0
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
